--- a/posts/improved-spa-code-sample-overview.mdx
+++ b/posts/improved-spa-code-sample-overview.mdx
@@ -246,7 +246,7 @@ The response includes a new access token, so that the SPA can continue to call A
 
 ![renewal response](/images/170/renewal-response.jpg?v=20240813)
 
-Although the SPA's code implements renewal flows correctly, both of them are unsatisfactory. I explain the security and usability issues in the <Link href='/posts/user-sessions-and-token-renewal'>IFrame Access Token Renewal</Link> post.
+Although the SPA's code implements renewal flows correctly, both of them are unsatisfactory. I explain the security and usability issues in the <Link href='/posts/user-sessions-and-token-renewal'>Iframe Access Token Renewal</Link> post.
 
 ### Logout
 
