--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -29,7 +29,7 @@ The first theme focuses on foundations and core concepts. It provides integrated
 - <Link href='/posts/user-data'>User Data Management</Link>
 - <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link>
 - <Link href='/posts/federated-logins'>User Authentication Behaviour</Link>
-- <Link href='/posts/user-sessions-and-token-renewal'>IFrame Access Token Renewal</Link>
+- <Link href='/posts/user-sessions-and-token-renewal'>Iframe-Based Access Token Renewal</Link>
 - <Link href='/posts/logout'>Logout</Link>
 - <Link href='/posts/id-tokens'>ID Tokens</Link>
 
