--- a/posts/logout.mdx
+++ b/posts/logout.mdx
@@ -1,6 +1,6 @@
 # Logout
 
-Previously I explained how <Link href='/posts/user-sessions-and-token-renewal'>IFrame Access Token Renewal</Link> can work for SPAs. Next I provide a brief overview of practical logout behaviours for OAuth-secured apps.
+Previously I explained how <Link href='/posts/user-sessions-and-token-renewal'>Iframe-Based Access Token Renewal</Link> can work for SPAs. Next I provide a brief overview of practical logout behaviours for OAuth-secured apps.
 
 ### Logouts and Users
 
