--- a/posts/basicspa-execution.mdx
+++ b/posts/basicspa-execution.mdx
@@ -4,7 +4,7 @@ Previously I summarised the behaviour of the initial <Link href='/posts/basicspa
 
 ### Prerequisites
 
-This blog’s code examples run in any Linux based terminal, and are tested on Ubuntu, Windows and macOS. On Windows it is expected that a [Git Bash](https://gitforwindows.org/) shell is used. Also ensure that an up to date version of [Node.js](https://nodejs.org/en/download/) is installed for your operating system.
+This blog’s code samples run in any Linux based terminal, and are tested on Ubuntu, Windows and macOS. On Windows it is expected that a [Git Bash](https://gitforwindows.org/) shell is used. Also ensure that an up to date version of [Node.js](https://nodejs.org/en/download/) is installed for your operating system.
 
 ### Step 1: Download Code from GitHub
 
