--- a/posts/error-handling-and-supportability.mdx
+++ b/posts/error-handling-and-supportability.mdx
@@ -111,7 +111,7 @@ private _isExpectedApiError(error: UIError): boolean {
 
 ### Error Codes per Component
 
-For each of this blog’s UI and API code examples, an *Error Codes* module lists all of the known error codes. This provides a full list of error codes and can be published to interested parties when required.
+For each of this blog’s UI and API code samples, an *Error Codes* module lists all of the known error codes. This provides a full list of error codes and can be published to interested parties when required.
 
 ```typescript
 export class ErrorCodes {
