--- a/posts/final-spa-overview.mdx
+++ b/posts/final-spa-overview.mdx
@@ -150,7 +150,7 @@ I aim to have a good awareness of factors that impact performance, but avoid opt
 
 ### Web Code Scalability
 
-The final web code example is hosted at an */spa* path to show that other apps with the same business privileges could be added alongside it, and share the same cookies. This would enable the code for a large app to be split at development time, then recomposed at deployment time. Each frontend would call APIs using shared cookies, and it would be possible to seamlessly navigate across apps without OpenID Connect redirects.
+The final web code sample is hosted at an */spa* path to show that other apps with the same business privileges could be added alongside it, and share the same cookies. This would enable the code for a large app to be split at development time, then recomposed at deployment time. Each frontend would call APIs using shared cookies, and it would be possible to seamlessly navigate across apps without OpenID Connect redirects.
 
 ### Where Are We?
 
