--- a/posts/improved-spa-code-sample-overview.mdx
+++ b/posts/improved-spa-code-sample-overview.mdx
@@ -191,7 +191,7 @@ The SPA handles this *Not Found For User* API error code specially and redirects
 
 ### SPA Downloads User Info
 
-As for the first code example, the SPA continues to get name details for display from the OpenID Connect userinfo endpoint:
+As for the first code sample, the SPA continues to get name details for display from the OpenID Connect userinfo endpoint:
 
 ```json
 {
