--- a/posts/logout.mdx
+++ b/posts/logout.mdx
@@ -34,7 +34,7 @@ To add to the complexity, some authorization servers use non-standard logout sol
 
 ### Allowed Post Logout Redirect URIs
 
-Some providers do not allow post logout redirect URIs to include a hash location so you may instead need to redirect to a small logout HTML page, then manage this redirect within the app. The next SPA code example follows this approach:
+Some providers do not allow post logout redirect URIs to include a hash location so you may instead need to redirect to a small logout HTML page, then manage this redirect within the app. The next SPA code sample follows this approach:
 
 ```html
 <!DOCTYPE html>
