--- a/posts/net-core-code-sample-overview.mdx
+++ b/posts/net-core-code-sample-overview.mdx
@@ -4,7 +4,7 @@ Previously we explained the <Link href='/posts/final-nodeapi-coding-key-points'>
 
 ### Final API Code Sample Overview
 
-As for other code examples on this blog, the API has a money based theme of investments. It provides only a couple of endpoints that return fictional hard coded data.
+As for other code samples on this blog, the API has a money based theme of investments. It provides only a couple of endpoints that return fictional hard coded data.
 
 The API aims to be visual and can serve this blog’s apps, such as the <Link href='/posts/how-to-run-the-react-js-spa'>Final SPA</Link> below. Running both together is a good way to ensure that the API is client focused. API logs are then generated via requests from the client:
 
