--- a/posts/web-architecture-goals.mdx
+++ b/posts/web-architecture-goals.mdx
@@ -72,7 +72,7 @@ This blog's posts and the accompanying code samples explain OAuth features and d
 
 ### Where Are We?
 
-I articulated some desired behaviour, and next I provide a code example to get started on the journey of achieving it.
+I articulated some desired behaviour, and next I provide a code sample to get started on the journey of achieving it.
 
 ### Next
 
