--- a/posts/api-architecture-node.mdx
+++ b/posts/api-architecture-node.mdx
@@ -4,7 +4,7 @@ Previously we drilled into this blog’s <Link href='/posts/error-handling-and-s
 
 ### Final API Code Sample Overview
 
-As for other code examples on this blog, the API has a money based theme of investments. It provides only a couple of endpoints that return fictional hard coded data.
+As for other code samples on this blog, the API has a money based theme of investments. It provides only a couple of endpoints that return fictional hard coded data.
 
 The API aims to be visual and can serve this blog’s apps, such as the <Link href='/posts/how-to-run-the-react-js-spa'>Final SPA</Link> below. Running both together is a good way to ensure that the API is client focused. API logs are then generated via requests from the client:
 
@@ -142,7 +142,7 @@ export class CompanyService {
 }
 ```
 
-The OAuth integration and its claims handling uses exactly the same techniques as the second code example, summarised earlier in its <Link href='/posts/updated-api-coding-key-points'>API Coding Key Points</Link>. Therefore I will not repeat them, and these posts will instead only focus only on newer features.
+The OAuth integration and its claims handling uses exactly the same techniques as the second code sample, summarised earlier in its <Link href='/posts/updated-api-coding-key-points'>API Coding Key Points</Link>. Therefore I will not repeat them, and these posts will instead only focus only on newer features.
 
 ### Main Feature 2: Production Supportability
 
